--- a/JazAndSeanSATProject.UI.MVC/configs/connections.config
+++ b/JazAndSeanSATProject.UI.MVC/configs/connections.config
@@ -1,3 +1,5 @@
 ﻿<connectionStrings>
   <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=SATDatabase;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="SATDatabaseEntities" connectionString="metadata=res://*/SATDatabase.csdl|res://*/SATDatabase.ssdl|res://*/SATDatabase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=SATDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
+
